--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Finflio" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+    <style name="Theme.Finflio" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 </resources>
