--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Finflio" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.Finflio.Splash" parent="Theme.MaterialComponents.DayNight">
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="postSplashScreenTheme">@style/Theme.MaterialComponents.DayNight.DarkActionBar</item>
     </style>
 </resources>
